Fixed a display issue with a div wrapping each row

--- a/static/bootstrap/css/stylesheet.css
+++ b/static/bootstrap/css/stylesheet.css
@@ -1,5 +1,5 @@
 div{
-	margin-top:10px;	
+	margin-top:5px;	
 }
 
 .box_rotate {
